# trevorWieland

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
about/cat-photos/: index.html
about/the-author/: index.html
docs/: index.md
docs/about/: cat-photos.md  the-author.md
docs/gists/: ai-retail-space.md
docs/projects/: pokemon-playing-ai.md
docs/work/: goody-goody.md  rakuten-mobile.md  virtusize.md
gists/ai-retail-space/: index.html
projects/pokemon-playing-ai/: index.html
search/: search_index.json
work/goody-goody/: index.html
work/rakuten-mobile/: index.html
work/virtusize/: index.html
