[tool.poetry]
name = "trevorwieland"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
